Version 1.0.84 (Build 2025042100)
 - Support Ningxia region (requires Poodll China subscription)

Version 1.0.83 (Build 2025041800)
 - Support for Moodle 5.0 and PHP 8.4
 - Added support for custom Cloud Poodll server

Version 1.0.82 (Build 2025040400)
- Added is_branded callback so the app icons don't look like pink smudges
- Added new fluency item type (not really ready yet for testing, so it's hidden)
- Fixed a bug which could cause gapfill items to collapse if hide start page was set


Version 1.0.81 (Build 2025030500)
- Fix for lack of import in short answer questions
- Streaming audio recorder for open transcription in English (on in MMA, toggle on in admin settings)
- Added alternates field in Short answer, Listen and Speak, Speaking Gap Fill and passage reading
- Better detection of mobile app


Version 1.0.80 (Build 2025021900)
- Fix for upgrade script on postgresql
- Fix for multichoice question duplicate when answer options are images
- Fix for broken audio recorder on short answer questions

Version 1.0.79 (Build 2025021200)
- Added fix for speech rec. on Polish numbers 22 - 99
- Added fix so that teachers could see the view attempt report

Version 1.0.78 (Build 2025020701)
- Fixed bug in new multichoice code that might mark a correct answer false

Version 1.0.77 (Build 2025020700)
- Fixed free exercise spinner which did not work well on old moodles
- Turned off item review on free exercises and passage reading if show-item-review was turned off 
- Added image option to multichoice
- Fixed timer issue in free speaking
- Fixed export from free speaking issue
- Added view attempt report
- Added disable copy/paste option to free writing

Version 1.0.76 (Build 2025011701)
- Added a free writing response type
- Fixed the display of questions with titles
- Fixed some issues with Passage Reading results display
- Added results display of Free writing, speaking and passage reading
- Fixed issue with push tab display

Version 1.0.75 (Build 2025010702)